# hacspec-sss

./: .gitignore  Cargo.toml  README.md
src/: sss.rs
tests/: test_sss.rs  test_vectors.sage
