[package]
name = "hacspec-sss"
version = "0.1.0"
authors = ["Sivaram Dhakshinamoorthy <siv2ram@gmail.com>"]
edition = "2021"

[lib]
path = "src/sss.rs"

[dependencies]
hacspec-lib =  { git = "https://github.com/hacspec/hacspec/", branch = "master" }
hacspec-sha256 =  { git = "https://github.com/hacspec/hacspec/", branch = "master" }